# videopipeline

./: .gitignore  .readthedocs.yaml  LICENSE  README.md  absprung.ipynb  jump_detector.ipynb  pyproject.toml  requirements.txt  setup.cfg
.github/workflows/: black.yml  pytest.yml  python-app.yml  python-publish.yml
docs/: api.rst  conf.py  examples.rst  getstartetd.rst  index.rst
docs/code_snippets/: node.py
notebooks/: detect_audio_start.ipynb  jump_detector.ipynb
tests/: test.py  unittests.py
videopipeline/: __init__.py  actions.py  core.py  functions.py  generators.py
videopipeline/nodes/: __init__.py  actions.py  functions.py  generators.py
videopypeline/: __init__.py  __main__.py  actions.py  core.py  functions.py  generators.py
