[metadata]
name = videopipeline
version = 0.0.1
author = Elia Carrara
author_email = elia.carrara@bluewin.ch
description = Process video data
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/eliacarrara/videopipeline
project_urls =
    Bug Tracker = https://github.com/eliacarrara/videopipeline/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = videopipeline
packages = find:
python_requires = >=3.6
install_requires = ['opencv-python==4.5.4.60', 'numpy==1.21.4', 'graphviz==0.19.1']

[options.packages.find]
where = videopipeline